--- a/RecipeList/Views/PublicRecipe/Index.cshtml
+++ b/RecipeList/Views/PublicRecipe/Index.cshtml
@@ -5,7 +5,6 @@
 }
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h1>Public Recipes</h1>
-    <a href="/Recipes/Create" class="btn btn-success">+ Create New Recipe</a>
 </div>
 
 <div class="row">
@@ -28,6 +27,10 @@
                         {
                             <div class="text-muted">No Image</div>
                         }
+                    </div>
+
+                    <div class="mt-4 text-muted" style="font-size: 0.9em;">
+                        <p>Published on: @item.PublishedAt.ToString("MMMM dd, yyyy")</p>
                     </div>
                 </div>
             </div>
