--- a/RecipeList/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/RecipeList/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -4,9 +4,12 @@
     ViewData["Title"] = "Register confirmation";
 }
 
-<h1 style="margin: auto">@ViewData["Title"]</h1>
 <style>
-    
+    .container {
+        margin-left:auto;
+        margin-right: auto;
+        align-content: center;
+    }
 
     .button-link {
         display: inline-block;
@@ -27,6 +30,8 @@
         box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
     }
 </style>
+<div class="container">
+<h1 style="margin: auto">@ViewData["Title"]</h1>
 @{
     if (@Model.DisplayConfirmAccountLink)
     {
@@ -41,4 +46,5 @@
 </p>
     }
 }
+</div>
 
